fixing white space7

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,6 @@
 }
 
 body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
   overflow-x: hidden;
 }
 
@@ -115,7 +112,7 @@ h6 {
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /*animation: App-logo-spin infinite 20s linear;*/
   }
 }
 
@@ -373,7 +370,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-left: 25px;
 }
 .banner img {
-  animation: updown 3s linear infinite;
+  /*animation: updown 3s linear infinite;*/
 }
 
 /*
@@ -391,7 +388,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   padding: 60px 50px;
   margin-top: -60px;
-  animation: sophisticatedGlowing 8s infinite alternate;
+  /*animation: sophisticatedGlowing 8s infinite alternate;*/
 }
 
 .skill h2 {
@@ -570,8 +567,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 */
 
 .proj-imgbx {
+  /*
   animation: smoothWaveShake 6s ease-in-out infinite;
   animation: sophisticatedGlowing2 6s ease-in-out infinite;
+  */
   position: relative;
   border-radius: 30px;
   overflow: hidden;
